Update CORS configuration with specific origins